[package]
name = "cch23-robertohuertasm"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"

tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-http = "3.4"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

[dev-dependencies]
